--- a/Trains.WP8/LiveProgressPage.xaml
+++ b/Trains.WP8/LiveProgressPage.xaml
@@ -129,7 +129,7 @@
                         <ItemsControl.Template>
                             <ControlTemplate TargetType="ItemsControl">
                                 <ScrollViewer>
-                                    <ItemsPresenter/>
+                                    <ItemsPresenter Margin="0,0,0,95" />
                                 </ScrollViewer>
                             </ControlTemplate>
                         </ItemsControl.Template>
