--- a/Trains.WP8/MainAndFilterPage.xaml
+++ b/Trains.WP8/MainAndFilterPage.xaml
@@ -154,7 +154,7 @@
                         <ItemsControl.Template>
                             <ControlTemplate TargetType="ItemsControl">
                                 <ScrollViewer>
-                                    <ItemsPresenter/>
+                                    <ItemsPresenter Margin="0,0,0,95" />
                                 </ScrollViewer>
                             </ControlTemplate>
                         </ItemsControl.Template>
@@ -178,7 +178,7 @@
                     <ItemsControl.Template>
                         <ControlTemplate TargetType="ItemsControl">
                             <ScrollViewer>
-                                <ItemsPresenter/>
+                                <ItemsPresenter Margin="0,0,0,95" />
                             </ScrollViewer>
                         </ControlTemplate>
                     </ItemsControl.Template>
@@ -205,7 +205,7 @@
                         <ItemsControl.Template>
                             <ControlTemplate TargetType="ItemsControl">
                                 <ScrollViewer>
-                                    <ItemsPresenter/>
+                                    <ItemsPresenter Margin="0,0,0,95" />
                                 </ScrollViewer>
                             </ControlTemplate>
                         </ItemsControl.Template>
