--- a/LearnOnTheGo.WP8/CoursePage.xaml
+++ b/LearnOnTheGo.WP8/CoursePage.xaml
@@ -127,7 +127,13 @@
                     <ScrollViewer Grid.Row="1" ManipulationStarted="OnScrollViewerManipulationStarted">
                         <ItemsControl Margin="0,0,0,95"
                                       ItemsSource="{Binding Lectures}"
-                                      ItemTemplate="{StaticResource lectureTemplate}" />
+                                      ItemTemplate="{StaticResource lectureTemplate}">
+                            <ItemsControl.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <VirtualizingStackPanel />
+                                </ItemsPanelTemplate>
+                            </ItemsControl.ItemsPanel>
+                        </ItemsControl>
                     </ScrollViewer>
                 </Grid>
             </DataTemplate>
