--- a/LearnOnTheGo.WP8/DownloadsPage.xaml
+++ b/LearnOnTheGo.WP8/DownloadsPage.xaml
@@ -102,7 +102,13 @@
                         <ItemsControl x:Name="inProgressDownloads"
                                       Margin="0,0,0,95"
                                       ItemsSource="{Binding DownloadsInProgress}"
-                                      ItemTemplate="{StaticResource videoTemplate}" />
+                                      ItemTemplate="{StaticResource videoTemplate}">
+                            <ItemsControl.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <VirtualizingStackPanel />
+                                </ItemsPanelTemplate>
+                            </ItemsControl.ItemsPanel>
+                        </ItemsControl>
                         <TextBlock x:Name="inProgressDownloadsEmptyMessage" 
                                    Visibility="Collapsed"
                                    Text="No downloads"
@@ -119,7 +125,13 @@
                         <ItemsControl x:Name="completedDownloads"
                                       Margin="0,0,0,95"
                                       ItemsSource="{Binding CompletedDownloads}"
-                                      ItemTemplate="{StaticResource videoTemplate}" />
+                                      ItemTemplate="{StaticResource videoTemplate}">
+                            <ItemsControl.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <VirtualizingStackPanel />
+                                </ItemsPanelTemplate>
+                            </ItemsControl.ItemsPanel>
+                        </ItemsControl>
                         <TextBlock x:Name="completedDownloadsEmptyMessage" 
                                    Visibility="Collapsed"
                                    Text="No downloads"
